slurm.thanatos-1-8.46401.err
  File "main.py", line 46
    modelParameters = [0.12, 0.077,  0.058, 0.005 0, 0, 0, 0, 0, 0] #PL1
                                                  ^
SyntaxError: invalid syntax
